--- a/Layihe/index.html
+++ b/Layihe/index.html
@@ -22,11 +22,12 @@
                       <li><a href="./index3.html">Contact Us</a></li>
                   </ul>
               </nav>
-             <div class="menu-bell"></div>
+             <div class="menu-bell">
              <div class="icon"><a href="#"><i class="fa-regular fa-bell bell"></i></a></div>
                 <div class="user"><i class="fa-solid fa-user-plus"></i></div>
-             <!-- <div class="fullName">
-             </div> -->
+                <!-- <div class="fullName">
+                </div> -->
+            </div>
              <a href="#"><i class="fa-solid fa-bars" id="burger-menu"></i></a>
              <div class="dropdown-menu">
                 <li><a href="./index.html">Home</a></li>
